--- a/index.html
+++ b/index.html
@@ -10,11 +10,7 @@
     <title>FrontEnd</title>
   </head>
   <body>
-    <div id="root">
-      
-    </div>
-    
-
+    <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
